--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -8,25 +8,30 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up BuildTools
         run: wget -O BuildTools.jar https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar
+
       - name: Install JDK 8
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '8'
           cache: 'maven'
+
       - name: Install CraftBukkit 1.8.8, 1.12.2, 1.16.5
         run: |
           java -jar BuildTools.jar --rev 1.8.8 --compile craftbukkit
           java -jar BuildTools.jar --rev 1.12.2 --compile craftbukkit
           java -jar BuildTools.jar --rev 1.16.5 --compile craftbukkit
+
       - name: Install JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'microsoft'
           java-version: '17'
           cache: 'maven'
+
       - name: Install CraftBukkit 1.17.1, 1.18.2, 1.19.4, 1.20.1, 1.20.4
         run: |
           java -jar BuildTools.jar --rev 1.17.1 --compile craftbukkit --remapped
@@ -34,18 +39,15 @@ jobs:
           java -jar BuildTools.jar --rev 1.19.4 --compile craftbukkit --remapped
           java -jar BuildTools.jar --rev 1.20.1 --compile craftbukkit --remapped
           java -jar BuildTools.jar --rev 1.20.4 --compile craftbukkit --remapped
+
       - name: Install JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: 'microsoft'
           java-version: '21'
           cache: 'maven'
-      - name: Install CraftBukkit 1.20.6, 1.21, 1.21, 1.21.4, 1.21.5, 1.21.7, 1.21.9
-        # Use build number 4287 to compile CraftBukkit 1.21,
-        # Use build number 4522 to compile CraftBukkit 1.21.7,
-        # Use build number 4539 to compile CraftBukkit 1.21.9
-        # https://hub.spigotmc.org/jira/browse/BUILDTOOLS-658
-        # https://hub.spigotmc.org/versions/
+
+      - name: Install CraftBukkit 1.20.6, 1.21, 1.21.1, 1.21.4, 1.21.5, 1.21.7, 1.21.9
         run: |
           java -jar BuildTools.jar --rev 1.20.6 --compile craftbukkit --remapped
           java -jar BuildTools.jar --rev 4287 --compile craftbukkit --remapped
@@ -54,25 +56,20 @@ jobs:
           java -jar BuildTools.jar --rev 1.21.5 --compile craftbukkit --remapped
           java -jar BuildTools.jar --rev 4522 --compile craftbukkit --remapped
           java -jar BuildTools.jar --rev 4539 --compile craftbukkit --remapped
+
       - name: Compile InvSee++
         run: mvn clean package install --batch-mode --update-snapshots
-      - name: Create tagged release
-        env:
-          GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
         with:
-          files: |
+          name: InvSee-Artifacts
+          path: |
             InvSee++_Plugin/target/InvSee++.jar
             InvSee++_Give_Plugin/target/InvSee++_Give.jar
             InvSee++_Clear_Plugin/target/InvSee++_Clear.jar
             InvSee++_Clone_Plugin/target/InvSee++_Clone.jar
-#      No longer needed since the maven-release-plugin already does this.
-#      - name: Deploy to GitHub Packages
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        if: startsWith(github.ref, 'refs/tags/')
-#        run: mvn deploy
+
       - name: Deploy Javadoc
         uses: MathieuSoysal/Javadoc-publisher.yml@v2.4.0
         if: github.ref == 'refs/heads/master'
